--- a/src/Visao/InternalFrameCodigos.form
+++ b/src/Visao/InternalFrameCodigos.form
@@ -538,10 +538,12 @@
             <Component class="javax.swing.JComboBox" name="jComboBoxAnos">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="3">
+                  <StringArray count="5">
                     <StringItem index="0" value="1 ano"/>
                     <StringItem index="1" value="2 anos"/>
                     <StringItem index="2" value="3 anos"/>
+                    <StringItem index="3" value="4 anos"/>
+                    <StringItem index="4" value="5 anos"/>
                   </StringArray>
                 </Property>
                 <Property name="selectedItem" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
